--- a/package.json
+++ b/package.json
@@ -27,14 +27,28 @@
     "@docusaurus/theme-bootstrap": "^2.0.0-alpha.72",
     "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.71",
     "@easyops-cn/docusaurus-search-local": "^0.16.1",
+    "@material-ui/core": "^4.11.2",
     "@mdx-js/react": "^1.6.21",
+    "@types/react": "^16.9.53",
+    "@types/react-select": "^3.0.27",
     "clsx": "^1.1.1",
     "docusaurus-plugin-sass": "^0.1.12",
+    "jsbi": "^3.1.4",
     "lodash": "4.17.21",
+    "raw-loader": "^4.0.2",
+    "rc-tween-one": "^2.7.3",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-d3-tree": "2.0.0-beta.1",
+    "react-dnd": "^11.1.3",
+	"react-dnd-html5-backend": "^11.1.3",
+    "react-dom": "17.0.0",
+    "react-scripts": "3.4.3",
+    "react-select": "^3.1.1",
+    "react-spring": "^8.0.27",
+    "react-toastify": "^6.1.0",
     "ssri": "8.0.1",
-    "trim": "0.0.3"
+    "trim": "0.0.3",
+	"rc-tween-one": "^2.7.3"
   },
   "browserslist": {
     "production": [
